# WyckoffTransformer

./: .gitignore  .gitmodules  Calibrate.ipynb  CrystalFormer.ipynb  DiffCSP++.ipynb  DiffCSP_orig_convert.ipynb  DiffCSP_to_sites.py  Digraph.gv  Element Movers Distance.ipynb  Evaluate.ipynb  FlowMM-index.ipynb  Generate.ipynb  Lattice study.ipynb  MP-20 E_hull.ipynb  MP_20 eval.ipynb  MP_20_E_hull_v2.ipynb  MP_20_biternary_paper_eval.ipynb  MP_20_full_eval.ipynb  MP_20_paper_eval.ipynb  Nd(Al2Cu)4.cif  NeurIPS-2024-eval.ipynb  Playground test.ipynb  Playground.ipynb  Question.ipynb  README.md  SS.ipynb  Train 1 head mixer.ipynb  Train 1 head no mixer small.ipynb  Train 1 head no mixer.ipynb  Train 4 head no mixer.ipynb  Train 4 heads no mixer no clip.ipynb  Train dev.ipynb  Train.ipynb  WyCryst_vs_WyckoffTransformer.ipynb  WyCryst_vs_WyckoffTransformer_E_hull.ipynb  Wyckoff self-aug demo .ipynb  WyckoffTransformer_vs_DiffCSP.ipynb  augmentation_dev.ipynb  bench.ipynb  cache_a_dataset.py  (+80 more)
CRP/: README  env_setup.sh  make_training_script.py  sweep_fdocos15.sh  sweep_lrop5hpj_10.sh  sweep_sqs1zyl6.sh  sweep_y0gtylov.sh  train.sh  train_band_gap.sh  train_energy.sh  train_energy_matbench_dicovery_mp_2022.sh  train_pilot_cpu.sh  train_pilot_cuda.sh
ICLR_eval/: DFT_eval.ipynb  LLM_vs_WT.ipynb  MP_20_biternary.ipynb  carbon_24.ipynb  perov_5.ipynb  prepare_matbench.ipynb  rare_sg.ipynb  uniqueness.ipynb
ICML_eval/: DFT_eval.ipynb  LLM_vs_WT.ipynb  MP_20_paper_eval.ipynb  README.md  mp_20_discussion.ipynb  mpts_52.ipynb  pyxtal_time.ipynb  space_group_plot.ipynb  tokenization_discussion.ipynb  tokenization_discussion_anon.ipynb  tokenization_discussion_mpts.ipynb
MiAD_eval/: num_elements_and_sg.ipynb  num_elements_and_sg_CHGNet.ipynb  uniqueness_eval.ipynb
cascade_transformer/: dataset.py  model.py
cdvae/: README
data/: README  matbench_discovery_mp_2022_tol_0.01  matbench_discovery_mp_trj_full_tol_0.001
evaluation/: DiffCSP_to_sites.py  README.md  cdvae_metrics.py  generated_dataset.py  novelty.py  statistical_evaluator.py
no_can/: pyxtal_no_can_mp-1305888.cif  pyxtal_no_can_mp-1311133.cif  pyxtal_no_can_mp-1316859.cif  pyxtal_no_can_mp-763577.cif
research_notebooks/: MP_20_full_eval.ipynb  README.md  WFLCD-load.ipynb  check_new_weights.ipynb  check_wyformer.ipynb  cluster_generation.ipynb  comp_validity.ipynb  dft_recover_MiAD.ipynb  dft_recover_wyformer.ipynb  enum_study.ipynb  generation_investigation.ipynb  mp_2022_plot.ipynb  mptrj_duplicates.ipynb  notebook-radar.ipynb  permutations_likelihood.ipynb  perov_5.ipynb  props.ipynb  relaxation_symmetry.ipynb  sg_predict.ipynb  sun_standalone.ipynb
results/: results_all.csv  results_ood.csv  results_random.csv  results_space_group.csv
results_classical/: results_all.csv  results_ood.csv  results_random.csv  results_space_group.csv
scripts/: DiffCSP_to_sites.py  Dropbox_pull.sh  cache_a_dataset.py  cache_generated_datasets.py  compute_test_losss.py  cryspr_chgnet.py  cryspr_pyxtal_chgnet.py  data.py  generate.py  preprocess_wychoffs.py  run_all_yamls.sh  sample_structures_for_dft.py  select_from_mp_20.py  tokenise_a_dataset.py  train.py  utils.py  view_wyformer_material.py  visualize_diffusion.py  visualize_fe3o4.py
tables/: cdvae_metrics_no_relax_table.csv  cdvae_metrics_no_relax_table.tex  cdvae_metrics_table.csv  cdvae_metrics_table.tex  llm.tex  llm_1.tex  llm_2.tex  mp_20_biternary_paper_summary_table.csv  mp_20_biternary_paper_summary_table.pkl  mp_20_biternary_summary_similarity_raw.tex  mp_20_biternary_summary_symmetry_raw.tex  paper_summary_table.csv  summary_table.tex  (+5 more)
(+230 files in other folders)
