[tool.poetry]
name = "wyckofftransformer"
version = "0.2.0"
description = ""
authors = ["Nikita Kazeev <kazeevn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
pymatgen = ">=2023.10.4"
ipykernel = ">=6.25.2"
pandas = ">=2.1.1"
numpy = ">=1.26.0"
ase = ">=3.22.1"
nglview = ">=3.0.8"
wandb = ">=0.16.0"
py3dmol = ">=2.0.4"
pyxtal = ">=0.6.6"
scikit-learn = "^1.5.0"
filelock = "^3.14.0"
torch = {path = "/mnt/hdd/torch_wheels/torch-2.4.0a0+gitda7bf1d-cp310-cp310-linux_x86_64.whl"}
pytorch-triton = {path = "/mnt/hdd/torch_wheels/pytorch_triton-3.0.0+45fff310c8-cp310-cp310-linux_x86_64.whl"}
omegaconf = "^2.3.0"
# intel-extension-for-pytorch = {path = "/mnt/hdd/torch_wheels/intel_extension_for_pytorch-2.4.0+gitb44a1f1-cp310-cp310-linux_x86_64.whl"}
# transformers = "^4.41.2"
smact = "^2.5.5"
wrapt-timeout-decorator = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
