[tool.poetry]
name = "wyckofftransformer"
version = "1.0.0"
description = "Wyckoff Transformer: Generation of Symmetric Crystals; ICML 2025"
authors = ["Nikita Kazeev <kazeevn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = ">=6.25.2"
pandas = ">=2.1.1"
numpy = ">=1.26.0,<2"
ase = ">=3.22.1"
nglview = ">=3.0.8"
wandb = ">=0.16.0"
py3dmol = ">=2.0.4"
scikit-learn = "^1.5.0"
filelock = "^3.14.0"
omegaconf = "^2.3.0"
smact = "^2.5.5"
wrapt-timeout-decorator = "^1.5.1"
catboost = "^1.2.5"
ipywidgets = "^8.1.3"
jupyter = {extras = ["nbextension"], version = "^1.0.0"}
monty = "^2024.5.24"
hydra-core = "^1.3.2"
matminer = "^0.9.2"
p-tqdm = "^1.4.2"
torch-geometric = "^2.6.1"
python-dotenv = "^1.0.1"
lightning = "^2.4.0"
cython = "<3.0.0"
pytorch-lightning = "^2.4.0"
pyxtal = "^1.0.6"
torch = {version = ">=2.1.0"}
matbench-discovery = "^1.3.1"
pandarallel = "^1.6.5"
setuptools = "^78.1.0"
wheel = "^0.45.1"
pip = "^25.0.1"
schedulefree = "^1.4.1"
torch-scatter = "^2.1.2"
torch-sparse = "^0.6.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
